--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -13,11 +13,11 @@
     <title>Clipitch</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="/imgs/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/imgs/apple-touch-icon."
+      href="imgs/apple-touch-icon."
     />
     <link rel="manifest" href="/manifest.webmanifest" />
 
@@ -83,13 +83,13 @@
       rel="stylesheet"
     />
 
-    <!--Estilo CSS-->
-    <link href="/css/style.css" rel="stylesheet" />
+    <!-- Estilo CSS -->
+    <link href="css/style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <!-- Nav bar -->
     <header class="masthead">
+      <!-- Nav bar -->
       <nav
         class="navbar navbar-expand-lg bg-transparent fixed-top"
         id="mainNav"
@@ -97,12 +97,17 @@
         <div class="container">
           <a class="navbar-brand js-scroll-trigger" href="#"
             ><img
-              src="/imgs/logo.png"
+              src="imgs/logo.png"
               alt="Clipitch"
-              style="width: 30%; height: 100%"
+              style="width: 20%; height: 100%"
           /></a>
           <button
-            class="navbar-toggler navbar-toggler-right"
+            class="
+              navbar-toggler navbar-toggler-right
+              shadow-none
+              border-0
+              text-white
+            "
             type="button"
             data-toggle="collapse"
             data-target="#navbarResponsive"
@@ -110,8 +115,8 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            Menu
             <i class="fas fa-bars ml-1"></i>
+            Menu
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ml-auto">
@@ -191,21 +196,21 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="/imgs/dts.jpg"
+                src="imgs/dts.jpg"
                 class="d-block w-100"
                 alt="carouselData"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="/imgs/horizon.jpg"
+                src="imgs/horizon.jpg"
                 class="d-block w-100"
                 alt="carouselData"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="/imgs/tlou.jpg"
+                src="imgs/tlou.jpg"
                 class="d-block w-100"
                 alt="carouselData"
               />
@@ -232,20 +237,19 @@
           <span class="visually-hidden"></span>
         </button>
       </div>
-      <br />
       <!-- /Carrossel -->
     </header>
 
     <!-- Galeria de vídeos do dia -->
-    <div class="section bg-light" id="clipsDia">
-      <br />
+    <div class="section estiloFundo" id="clipsDia">
       <div class="container">
         <h2 class="nav-link textoTitulo" href="#">Clips do dia</h2>
         <hr class="my-4" />
-        <br />
 
-        <div class="row">
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+        <div class="row justify-content-center">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe
               class="embed-responsive-item"
               src="https://www.youtube.com/embed/qN3OueBm9F4"
@@ -253,7 +257,9 @@
             ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe
               class="embed-responsive-item"
               src="https://www.youtube.com/embed/qN3OueBm9F4"
@@ -261,7 +267,9 @@
             ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe
               class="embed-responsive-item"
               src="https://www.youtube.com/embed/qN3OueBm9F4"
@@ -269,7 +277,9 @@
             ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe
               class="embed-responsive-item"
               src="https://www.youtube.com/embed/qN3OueBm9F4"
@@ -278,57 +288,129 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+        <div class="row justify-content-center">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
         </div>
 
-        <div class="row">
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+        <div class="row justify-content-center">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
         </div>
 
-        <div class="row">
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+        <div class="row justify-content-center">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe
+              class="embed-responsive-item"
+              src=""
+              allowfullscreen
+            ></iframe>
           </div>
         </div>
       </div>
@@ -337,14 +419,14 @@
 
     <!-- Galeria de vídeos da semana -->
     <div class="section estiloFundo" id="clipsSemana">
-      <br />
       <div class="container">
         <h2 class="nav-link textoTitulo" href="#">Clips da semana</h2>
         <hr class="my-4" />
-        <br />
 
-        <div class="row">
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+        <div class="row justify-content-center">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe
               class="embed-responsive-item"
               src="https://www.youtube.com/embed/qN3OueBm9F4"
@@ -352,7 +434,9 @@
             ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe
               class="embed-responsive-item"
               src="https://www.youtube.com/embed/qN3OueBm9F4"
@@ -360,7 +444,9 @@
             ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe
               class="embed-responsive-item"
               src="https://www.youtube.com/embed/qN3OueBm9F4"
@@ -368,7 +454,9 @@
             ></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe
               class="embed-responsive-item"
               src="https://www.youtube.com/embed/qN3OueBm9F4"
@@ -377,56 +465,80 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+        <div class="row justify-content-center">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe class="embed-responsive-item" allowfullscreen></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe class="embed-responsive-item" allowfullscreen></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe class="embed-responsive-item" allowfullscreen></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
-          </div>
-
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
-          </div>
-
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
-            <iframe class="embed-responsive-item" allowfullscreen></iframe>
-          </div>
-
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe class="embed-responsive-item" allowfullscreen></iframe>
           </div>
         </div>
 
-        <div class="row">
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+        <div class="row justify-content-center">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe class="embed-responsive-item" allowfullscreen></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe class="embed-responsive-item" allowfullscreen></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe class="embed-responsive-item" allowfullscreen></iframe>
           </div>
 
-          <div class="embed-responsive embed-responsive-16by9 col-md-3 mb-3">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          </div>
+
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          </div>
+
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
+            <iframe class="embed-responsive-item" allowfullscreen></iframe>
+          </div>
+
+          <div
+            class="embed-responsive embed-responsive-16by9 col-md-3 col-12 mb-3"
+          >
             <iframe class="embed-responsive-item" allowfullscreen></iframe>
           </div>
         </div>
@@ -447,17 +559,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 
     <!--Estilo JS-->
-    <script src="/js/style.js" type="text/javascript"></script>
+    <script src="js/style.js" type="text/javascript"></script>
 
     <!--API Auth JS-->
-    <script src="/js/script.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
   </body>
 
   <!-- Rodapé -->
   <footer class="footer bg-custom py-4">
     <div class="container">
       <div class="row align-items-center text-white">
-        <div class="col-lg-4 text-lg-left">Copyright © - Clipitch.</div>
+        <div class="col-lg-4 text-lg-left">Copyright © - Clipitch</div>
         <div class="col-lg-4 text-lg-right">
           <a class="mr-3 text-white" href="#!">Sobre</a>&nbsp;
           <a href="#!" class="mr-3 text-white">API</a>&nbsp;
