--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -94,7 +94,7 @@
         class="navbar navbar-expand-lg bg-transparent fixed-top"
         id="mainNav"
       >
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand js-scroll-trigger" href="#"
             ><img
               src="imgs/logo.png"
