--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -55,30 +55,20 @@
 <body>
   <header class="masthead">
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg bg-transparent fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#"><img src="imgs/logo.png" alt="Clipitch"
-            style="width: 20%; height: 100%" /></a>
-        <button class="
-              navbar-toggler navbar-toggler-right
-              shadow-none
-              border-0
-              text-white
-            " type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars ml-1"></i>
-          Menu
+        <a class="navbar-brand js-scroll-trigger" href="#"><img class="nav-image"/></a>
+        <button class="navbar-toggler navbar-toggler-right shadow-none border-0 text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"><i class="fas fa-bars ml-1"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav text-uppercase ml-auto">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#clipsDia">Clips do dia</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item">              
               <a class="nav-link js-scroll-trigger" href="#clipsSemana">Clips da semana</a>
             </li>
-              &nbsp;
-            <!-- Barra de pesquisa -->
             <li class="nav-item">
               <div class="input-group">
                 <div class="form-outline">
@@ -90,7 +80,6 @@
                 </button>
               </div>
             </li>
-            <!-- /Barra de pesquisa -->
           </ul>
         </div>
       </div>
