Makign search function #36

--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -550,7 +550,7 @@
   <!--Estilo JS-->
   <script src="js/style.js" type="text/javascript"></script>
 
-  <!--API Auth JS-->
+  <!--Script JS-->
   <script src="js/script.js" type="text/javascript"></script>
 </body>
 
