--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -50,6 +50,24 @@
 
   <!-- Estilo CSS -->
   <link href="css/style.css" rel="stylesheet" />
+
+  <!-- JQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Pooper JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+
+  <!-- FontAwesome JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+
+  <!--Estilo JS-->
+  <script src="js/style.js" type="text/javascript"></script>
+
+  <!--Script JS-->
+  <script src="js/script.js" type="module"></script>
 </head>
 
 <body>
@@ -128,6 +146,8 @@
     </div>
     <!-- /Carrossel -->
   </header>
+
+  <div id="videos" style="display:none"></div>
 
   <!-- Galeria de vídeos do dia -->
   <div class="section" id="clipsDia">
@@ -535,23 +555,7 @@
   </div>
   <!-- /Modal -->
 
-  <!-- JQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Pooper JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-
-  <!-- FontAwesome JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-
-  <!--Estilo JS-->
-  <script src="js/style.js" type="text/javascript"></script>
-
-  <!--Script JS-->
-  <script src="js/script.js" type="text/javascript"></script>
+  
 </body>
 
 <!-- Rodapé -->
