--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -259,75 +259,14 @@
         <hr class="my-4" />
       </div>
       <div class="container">
-        <div class="row d-flex justify-content-center" id="teste"></div>
+        <div class="row d-flex justify-content-center" id="firstRowDaily"></div>
       </div>
 
       <div class="container">
-        <div class="row d-flex justify-content-center">
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-        </div>
+        <div
+          class="row d-flex justify-content-center"
+          id="secondRowDaily"
+        ></div>
       </div>
 
       <div class="text-end">
@@ -351,140 +290,19 @@
         <hr class="my-4" />
       </div>
       <div class="container">
-        <div class="row d-flex justify-content-center">
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-        </div>
+        <div
+          class="row d-flex justify-content-center"
+          id="firstRowWeekly"
+        ></div>
       </div>
 
-      <div class="container-fluid">
-        <div class="row d-flex justify-content-center">
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-
-          <div
-            class="
-              embed-responsive embed-responsive-16by9
-              col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3
-              d-flex
-              justify-content-center
-              mb-5
-            "
-          >
-            <iframe
-              class="embed-responsive-item video"
-              src=""
-              allowfullscreen
-            ></iframe>
-          </div>
-        </div>
+      <div class="container">
+        <div
+          class="row d-flex justify-content-center"
+          id="secondRowWeekly"
+        ></div>
       </div>
+
       <div class="text-end">
         <button
           type="button"
