--- a/src/clipitch/search.html
+++ b/src/clipitch/search.html
@@ -95,8 +95,11 @@
             <li class="nav-item">
               <div class="input-group">
                 <div class="form-outline">
-                  <input id="search-input" type="search" id="form1" placeholder="Buscar clips..."
-                    class="form-control shadow-none border-0" />
+                  <select name="select" id="searchValue" class="form-select shadow-none border-0">                    
+                    <option value="Pesquisar">Pesquisar...</option>
+                    <option value="League of Legends">League of Legends</option>
+                    <option value="Just Chatting">Just Chatting</option>
+                  </select>
                 </div>
                 <button id="search-button" type="button" class="btn btn-close-white shadow-none">
                   <i class="fas fa-search"></i>
@@ -122,9 +125,8 @@
       </div>
     </div>
   </div>
-</body>
 
-<!-- Rodapé -->
+  <!-- Rodapé -->
 <footer class="footer bg-custom py-4">
   <div class="container">
     <div class="row align-items-center text-white">
@@ -141,5 +143,5 @@
   </div>
 </footer>
 <!-- /Rodapé -->
-
+</body>
 </html>
