--- a/src/clipitch/clipssemana.html
+++ b/src/clipitch/clipssemana.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="robots" content="index, follow" />
 
-    <title>Clipitch</title>
+    <title>Clips da semana</title>
 
     <!-- Favicon -->
     <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
@@ -134,12 +134,12 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#clipsDia"
+                <a class="nav-link js-scroll-trigger" href="/clipsdia.html"
                   >Clips do dia</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#clipsSemana"
+                <a class="nav-link js-scroll-trigger" href="/clipssemana.html"
                   >Clips da semana</a
                 >
               </li>
@@ -252,38 +252,8 @@
 
     <div id="videos" style="display: none"></div>
 
-    <!-- Galeria de vídeos do dia -->
-    <div class="section" id="clipsDia">
-      <div class="container">
-        <h2 class="nav-link textoTitulo" href="#">Clips do dia</h2>
-        <hr class="my-4" />
-      </div>
-      <div class="container">
-        <div class="row d-flex justify-content-center" id="firstRowDaily"></div>
-      </div>
-
-      <div class="container">
-        <div
-          class="row d-flex justify-content-center"
-          id="secondRowDaily"
-        ></div>
-      </div>
-
-      <div class="text-end">
-        <a
-          href="/clipsdia.html"
-          class="btn btn-warning"
-          role="button"
-          aria-pressed="true"
-          id="btnOptions"
-          >Ver Mais...</a
-        >
-      </div>
-    </div>
-    <!-- /Galeria de vídeos do dia -->
-
     <!-- Galeria de vídeos da semana -->
-    <div class="section" id="clipsSemana">
+    <div class="section">
       <div class="container">
         <h2 class="nav-link textoTitulo" href="#">Clips da semana</h2>
         <hr class="my-4" />
@@ -302,19 +272,22 @@
         ></div>
       </div>
 
-      <div class="text-end">
-        <a
-          href="/clipssemana.html"
-          class="btn btn-warning"
-          role="button"
-          aria-pressed="true"
-          id="btnOptions"
-          >Ver Mais...</a
-        >
+      <div class="container">
+        <div
+          class="row d-flex justify-content-center"
+          id="thirdRowWeekly"
+        ></div>
+      </div>
+
+      <div class="container">
+        <div
+          class="row d-flex justify-content-center"
+          id="fourthRowWeekly"
+        ></div>
       </div>
     </div>
-    <br />
     <!-- /Galeria de vídeos da semana -->
+    <br />
   </body>
 
   <!-- Rodapé -->
