--- a/src/clipitch/erro.html
+++ b/src/clipitch/erro.html
@@ -99,13 +99,11 @@
             <li class="nav-item">
               <div class="input-group">
                 <div class="form-outline">
-                  <input
-                    id="search-input"
-                    type="search"
-                    id="form1"
-                    placeholder="Buscar clips..."
-                    class="form-control shadow-none border-0"
-                  />
+                  <select name="select" id="searchValue" class="form-select shadow-none border-0">  
+                    <option value="" disabled selected style="display: none;">Pesquisar...</option> 
+                    <option value="League of Legends">League of Legends</option>
+                    <option value="Just Chatting">Just Chatting</option>
+                  </select>
                 </div>
                 <button
                   id="search-button"
