--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -96,8 +96,8 @@
             <li class="nav-item">
               <div class="input-group">
                 <div class="form-outline">
-                  <select name="select" id="searchValue" class="form-select shadow-none border-0">                    
-                    <option value="Pesquisar">Pesquisar...</option>
+                  <select name="select" id="searchValue" class="form-select shadow-none border-0">  
+                    <option value="" disabled selected style="display: none;">Pesquisar...</option> 
                     <option value="League of Legends">League of Legends</option>
                     <option value="Just Chatting">Just Chatting</option>
                   </select>
