--- a/src/clipitch/search.html
+++ b/src/clipitch/search.html
@@ -96,7 +96,7 @@
               <div class="input-group">
                 <div class="form-outline">
                   <select name="select" id="searchValue" class="form-select shadow-none border-0">                    
-                    <option value="Pesquisar">Pesquisar...</option>
+                    <option value="" disabled selected style="display: none;">Pesquisar...</option> 
                     <option value="League of Legends">League of Legends</option>
                     <option value="Just Chatting">Just Chatting</option>
                   </select>
@@ -127,7 +127,7 @@
   </div>
 
   <!-- Rodapé -->
-<footer class="footer bg-custom py-4">
+<footer class="footer fixed-bottom bg-custom py-4">
   <div class="container">
     <div class="row align-items-center text-white">
       <div class="col-lg-4 text-lg-left">Copyright © - Clipitch</div>
