Ajuste erro html Alex & Welbert #31

--- a/src/clipitch/erro.html
+++ b/src/clipitch/erro.html
@@ -134,7 +134,7 @@
   </body>
 
 <!-- Rodapé -->
-<footer class="footer bg-custom py-4">
+<footer class="footer fixed-bottom bg-custom py-4">
   <div class="container">
     <div class="row align-items-center text-white">
       <div class="col-lg-4 text-lg-left">Copyright © - Clipitch</div>
