Correção de alguns erros ortográficos

--- a/src/clipitch/erro.html
+++ b/src/clipitch/erro.html
@@ -125,8 +125,8 @@
   <center>
   <h1 class="textotitulo">Erro </h1>
   <hr/>
-  <h4>Pagina não encontrada!</h4> 
-  <p>Lamento por algum motivo sua pagina não foi carregada! </p> 
+  <h4>Página não encontrada!</h4> 
+  <p>Lamento. Por algum motivo a sua página não foi carregada! </p> 
   <a href="index.html" class="btn btn-warning" role="button" aria-pressed="true">Voltar</a>
 </center>
   </div>
