--- a/src/clipitch/erro.html
+++ b/src/clipitch/erro.html
@@ -9,7 +9,7 @@
       <meta name="keywords" content="" />
       <meta name="description" content="" />
       <meta name="robots" content="index, follow" />
-      <title>erro de acesso</title>
+      <title>Erro de acesso</title>
       <!-- Favicon -->
       <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
       <link
