--- a/src/clipitch/erro.html
+++ b/src/clipitch/erro.html
@@ -63,7 +63,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-custom">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#"
+        <a class="navbar-brand js-scroll-trigger" href="/src/clipitch/index.html"
           ><img class="nav-image"
         /></a>
         <button
@@ -87,12 +87,12 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#clipsDia"
+              <a class="nav-link js-scroll-trigger" href="/src/clipitch/clipsdia.html"
                 >Clips do dia</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#clipsSemana"
+              <a class="nav-link js-scroll-trigger" href="/src/clipitch/clipssemana.html"
                 >Clips da semana</a
               >
             </li>
