--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -177,9 +177,10 @@
       </div>
     </div>
   
+    <div class="container">
       <div class="text-end">
         <a
-          href="/clipsdia.html"
+          href="/src/clipitch/clipsdia.html"
           class="btn btn-warning"
           role="button"
           aria-pressed="true"
@@ -187,6 +188,7 @@
           >Ver Mais...</a
         >
       </div>
+    </div>      
     </div>
   </div>
   <!-- /Galeria de vídeos do dia -->
@@ -212,16 +214,18 @@
         ></div>
       </div>
 
-      <div class="text-end">
-        <a
-          href="/clipssemana.html"
-          class="btn btn-warning"
-          role="button"
-          aria-pressed="true"
-          id="btnOptions"
-          >Ver Mais...</a
-        >
-      </div>
+      <div class="container">
+        <div class="text-end">
+          <a
+            href="/src/clipitch/clipssemana.html"
+            class="btn btn-warning"
+            role="button"
+            aria-pressed="true"
+            id="btnOptions"
+            >Ver Mais...</a
+          >
+        </div>
+      </div>      
     </div>
   </div>
   <br />
