--- a/src/clipitch/search.html
+++ b/src/clipitch/search.html
@@ -78,7 +78,7 @@
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg bg-custom">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#"><img class="nav-image" /></a>
+        <a class="navbar-brand js-scroll-trigger" href="/src/clipitch/index.html"><img class="nav-image" /></a>
         <button class="navbar-toggler navbar-toggler-right shadow-none border-0 text-white" type="button"
           data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -87,10 +87,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#clipsDia">Clips do dia</a>
+              <a class="nav-link js-scroll-trigger" href="/src/clipitch/clipsdia.html">Clips do dia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#clipsSemana">Clips da semana</a>
+              <a class="nav-link js-scroll-trigger" href="/src/clipitch/clipssemana.html">Clips da semana</a>
             </li>
             <li class="nav-item">
               <div class="input-group">
