Update things merged

--- a/src/clipitch/clipssemana.html
+++ b/src/clipitch/clipssemana.html
@@ -5,12 +5,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="author" content="" />
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
+    <meta name="author" content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro" />
+    <meta name="keywords" content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media" />
+    <meta name="description" content="Clips do dia e da semana do Twitch.TV para os aficionados por Games" />
     <meta name="robots" content="index, follow" />
 
-    <title>Clips da semana</title>
+    <title>Clipitch</title>
 
     <!-- Favicon -->
     <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
@@ -19,32 +19,31 @@
       sizes="180x180"
       href="imgs/apple-touch-icon."
     />
-    <link rel="manifest" href="/manifest.webmanifest" />
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Incluir título da Página" />
-    <meta property="og:description" content="Incluir descrição da página" />
+    <meta property="og:title" content="Clipitch" />
+    <meta property="og:description" content="Clips do dia e semana do Twitch.tv" />
     <meta
       property="og:url"
-      content="Incluir endereço tipo https://exemplo.tld/slug"
+      content="https://clipitch.herokuapp.com/"
     />
     <meta
       property="og:image"
-      content="Incluir endereço tipo https://exemplo.tld/caminho/para/imagem.jpg"
+      content="https://clipitch.herokuapp.com/imgs/logo.png"
     />
     <meta
       property="og:image:witdth"
-      content="Incluir largura da imagem em pixels, tipo 1200"
+      content="600"
     />
     <meta
       property="og:image:height"
-      content="Incluir altura da imagem em pixels, tipo 1200"
+      content="800"
     />
     <meta
       property="og:type"
-      content="Incluir o tipo da página - article para detalhamento e - website para outras páginas"
+      content="website"
     />
-    <meta property="og:site_name" content="Incluir o nome do site" />
+    <meta property="og:site_name" content="Clipitch" />
     <meta property="og:locale" content="pt-br" />
     <!-- /Open Graph Tags -->
 
@@ -52,16 +51,16 @@
     <meta property="twitter:card" content="Imagem Larga" />
     <meta
       property="twitter:url"
-      content="Incluir endereço tipo https://exemplo.tld/slug/"
+      content="https://clipitch.herokuapp.com/imgs/logo.png"
     />
-    <meta property="twitter:title" content="Incluir o título da página" />
+    <meta property="twitter:title" content="Clips do dia e semana do Twitch.tv" />
     <meta
       property="twitter:description"
-      content="Incluir descrição da página"
+      content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
     />
     <meta
       property="twitter:image"
-      content="Incluir endereço tipo https://exemplo.tld/caminho/para/imagem.jpg"
+      content="https://clipitch.herokuapp.com/imgs/logo.png"
     />
     <!-- /Twitter Tags -->
 
