--- a/src/clipitch/erro.html
+++ b/src/clipitch/erro.html
@@ -1,24 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head meta charset="UTF-8">
-    <!--Meta dados obrigatorios-->
-    <link href="css/style.css" rel="stylesheet" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
-      <meta name="author" content="" />
-      <meta name="keywords" content="" />
-      <meta name="description" content="" />
-      <meta name="robots" content="index, follow" />
-      <title>Erro de acesso</title>
-      <!-- Favicon -->
-      <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
-      <link
-        rel="apple-touch-icon"
-        sizes="180x180"
-        href="imgs/apple-touch-icon."
-      />
-      <link rel="manifest" href="/manifest.webmanifest" />
-      <!-- /Twitter Tags -->
+    <meta charset="utf-8" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta name="author" content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro" />
+    <meta name="keywords" content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media" />
+    <meta name="description" content="Clips do dia e da semana do Twitch.TV para os aficionados por Games" />
+    <meta name="robots" content="index, follow" />
+
+    <title>Erros de Acesso</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="imgs/apple-touch-icon."
+    />
+
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="Clipitch" />
+    <meta property="og:description" content="Clips do dia e semana do Twitch.tv" />
+    <meta
+      property="og:url"
+      content="https://clipitch.herokuapp.com/"
+    />
+    <meta
+      property="og:image"
+      content="https://clipitch.herokuapp.com/imgs/logo.png"
+    />
+    <meta
+      property="og:image:witdth"
+      content="600"
+    />
+    <meta
+      property="og:image:height"
+      content="800"
+    />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta property="og:site_name" content="Clipitch" />
+    <meta property="og:locale" content="pt-br" />
+    <!-- /Open Graph Tags -->
+
+    <!-- Twitter Tags -->
+    <meta property="twitter:card" content="Imagem Larga" />
+    <meta
+      property="twitter:url"
+      content="https://clipitch.herokuapp.com/imgs/logo.png"
+    />
+    <meta property="twitter:title" content="Clips do dia e semana do Twitch.tv" />
+    <meta
+      property="twitter:description"
+      content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
+    />
+    <meta
+      property="twitter:image"
+      content="https://clipitch.herokuapp.com/imgs/logo.png"
+    />
+    <!-- /Twitter Tags -->
   
       <!-- Bootstrap CSS -->
       <link
