--- a/src/clipitch/search.html
+++ b/src/clipitch/search.html
@@ -95,6 +95,9 @@
   <!--Script JS-->
   <script src="js/script.js" type="module"></script>
 
+   <!--Script JS-->
+   <script src="js/search.js" type="module"></script>
+
   <!--Script JS-->
   <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
 </head>
@@ -122,9 +125,14 @@
               <div class="input-group">
                 <div class="form-outline">
                   <select name="select" id="searchValue" class="form-select shadow-none border-0">                    
-                    <option value="" disabled selected style="display: none;">Pesquisar...</option> 
-                    <option value="League of Legends">League of Legends</option>
+                    <option value="" disabled selected style="display: none;">Pesquisar...</option>
+                    <option value="Apex Legends">Apex Legends</option>
+                    <option value="Grand Theft Auto V">Grand Theft Auto V</option>                     
                     <option value="Just Chatting">Just Chatting</option>
+                    <option value="League of Legends">League of Legends</option>   
+                    <option value="Red Dead Redemption 2">Red Dead Redemption 2</option>                 
+                    <option value="VALORANT">Valorant</option>
+                    <option value="World of Warcraft">World of Warcraft</option>
                   </select>
                 </div>
                 <button id="search-button" type="button" class="btn btn-close-white shadow-none">
@@ -153,7 +161,7 @@
   </div>
 
   <!-- Rodapé -->
-<footer class="footer fixed-bottom bg-custom py-4">
+<footer class="fixed-bottom bg-custom py-4">
   <div class="container">
     <div class="row align-items-center text-white">
       <div class="col-lg-4 text-lg-left">Copyright © - Clipitch</div>
