--- a/src/clipitch/search.html
+++ b/src/clipitch/search.html
@@ -124,7 +124,7 @@
             <li class="nav-item">
               <div class="input-group">
                 <div class="form-outline">
-                  <input type="text"  id="searchValue"  class="form-control shadow-none border-0">
+                  <input type="text"  id="searchValue" placeholder="Pesquisar... " class="form-control shadow-none border-0">
                 </div>
                 <button id="search-button" type="button" class="btn btn-close-white shadow-none">
                   <i class="fas fa-search"></i>
