--- a/src/clipitch/erro.html
+++ b/src/clipitch/erro.html
@@ -143,16 +143,7 @@
             <li class="nav-item">
               <div class="input-group">
                 <div class="form-outline">
-                  <select name="select" id="searchValue" class="form-select shadow-none border-0">  
-                    <option value="" disabled selected style="display: none;">Pesquisar...</option>
-                    <option value="Apex Legends">Apex Legends</option>
-                    <option value="Grand Theft Auto V">Grand Theft Auto V</option>                     
-                    <option value="Just Chatting">Just Chatting</option>
-                    <option value="League of Legends">League of Legends</option>   
-                    <option value="Red Dead Redemption 2">Red Dead Redemption 2</option>                 
-                    <option value="VALORANT">Valorant</option>
-                    <option value="World of Warcraft">World of Warcraft</option>
-                  </select>
+                  <input type="text"  id="searchValue" placeholder="Pesquisar... " class="form-control shadow-none border-0">
                 </div>
                 <button
                   id="search-button"
@@ -183,7 +174,7 @@
   </body>
 
 <!-- Rodapé -->
-<footer class="footer fixed-bottom bg-custom py-4">
+<footer class="bg-custom py-4">
   <div class="container">
     <div class="row align-items-center text-white">
       <div class="col-lg-4 text-lg-left">Copyright © - Clipitch</div>
