--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -122,7 +122,7 @@
             <li class="nav-item">
               <div class="input-group">
                 <div class="form-outline">
-                  <input type="text"  id="searchValue"  class="form-control shadow-none border-0">
+                  <input type="text"  id="searchValue" placeholder="Pesquisar... " class="form-control shadow-none border-0">
                 </div>
                 <button id="search-button" type="button" class="btn btn-close-white shadow-none">
                   <i class="fas fa-search"></i>
@@ -138,7 +138,7 @@
 
     <!-- Carrossel -->
     <div class="container text-white textoPrincipal">
-      <h1>Top do dia</h1>
+      <h1>Selecionados do dia</i></h1>
       <hr class="my-4 text-white" style="height: 2px" />
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -151,17 +151,7 @@
           aria-label="Slide 3"></button>
       </div>
       <div class="container">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="imgs/dts.jpg" class="d-block w-100" alt="carouselData" />
-          </div>
-          <div class="carousel-item">
-            <img src="imgs/horizon.jpg" class="d-block w-100" alt="carouselData" />
-          </div>
-          <div class="carousel-item">
-            <img src="imgs/tlou.jpg" class="d-block w-100" alt="carouselData" />
-          </div>
-        </div>
+        <div class="carousel-inner" id="carouselInner"></div>
       </div>
       <br /><br />
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -182,7 +172,7 @@
 
     <!-- Galeria de vídeos do dia -->
     <div class="section" id="clipsDia">
-      <div class="container">
+      <div class="container" id="tagsDiv">
         <h2 class="nav-link textoTitulo" href="#">Clips do dia</h2>
         <hr class="my-4" />
       </div>
@@ -255,7 +245,7 @@
 </body>
 
 <!-- Rodapé -->
-<footer class="footer bg-custom py-4">
+<footer class="bg-custom py-4">
   <div class="container">
     <div class="row align-items-center text-white">
       <div class="col-lg-4 text-lg-left">Copyright © - Clipitch</div>
