Finalização da funcionalidade de tags

--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -170,9 +170,14 @@
 
   <div id="videos" style="display: none"></div>
 
+  <br/>
+  <!-- Sistema de tags -->
+  <div class="section"><div class="container" id="tagsDiv"></div></div>
+  <!-- /Sistema de tags -->
+
     <!-- Galeria de vídeos do dia -->
     <div class="section" id="clipsDia">
-      <div class="container" id="tagsDiv">
+      <div class="container">
         <h2 class="nav-link textoTitulo" href="#">Clips do dia</h2>
         <hr class="my-4" />
       </div>
