Ajuste no layout das tags

--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -170,9 +170,14 @@
 
   <div id="videos" style="display: none"></div>
 
-  <br/>
   <!-- Sistema de tags -->
-  <div class="section"><div class="container" id="tagsDiv"></div></div>
+  <div class="section">
+    <div class="container-fluid bg-warning">
+      <ul class="list-group list-group-horizontal-md" id="tagsDiv">
+      </ul>    
+    </div>
+  </div>
+  
   <!-- /Sistema de tags -->
 
     <!-- Galeria de vídeos do dia -->
