--- a/src/clipitch/search.html
+++ b/src/clipitch/search.html
@@ -148,6 +148,8 @@
     <div class="container">
       <div class="row" id="searchVideos">
       </div>
+      <br>
+      <a class="btn btn-warning" type="button" role="button" onclick="window.history.back();"><i class="fas fa-backward"></i>&nbsp;Voltar</a>
     </div>
   </div>
 
