Ajustes do 1º semestre e não do 5º semestre

--- a/src/clipitch/search.html
+++ b/src/clipitch/search.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Clips do dia e da semana do Twitch.TV para os aficionados por Games" />
     <meta name="robots" content="index, follow" />
 
-    <title>Clipitch</title>
+    <title>Resultados</title>
 
     <!-- Favicon -->
     <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
@@ -88,9 +88,6 @@
 
   <!-- FontAwesome JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-
-  <!--Estilo JS-->
-  <script src="js/style.js" type="text/javascript"></script>
 
   <!--Script JS-->
   <script src="js/script.js" type="module"></script>
