--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -185,39 +185,39 @@
   <br />
   <!-- /Galeria de vídeos da semana -->
 
-  <!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
-
-<!-- Modal -->
-<div id="myModal" class="modal">
-  <!-- Conteúdo do Modal -->
-  <div class="modal-content">
-    <div class="modal-header">
-      <span class="close">&times;</span>
+  <!-- Rodapé -->
+  <footer class="bg-custom py-4">
+    <div class="container">
+      <div class="row align-items-center text-white">
+        <div class="col-lg-4 text-lg-left">
+          Copyright © - Clipitch
+          <br />
+          <small>&copy; Todos os direitos reservados.</small>
+        </div>
+      </div>
     </div>
-    <div class="modal-body">
-      <div id="modal-body"></div>
-    </div>
-    <div class="modal-footer">
-      <div id="modal-footer"></div>
-    </div>
-  </div>
-</div>
+  </footer>
+  <!-- /Rodapé -->
 
-</body>
-
-<!-- Rodapé -->
-<footer class="bg-custom py-4">
-  <div class="container">
-    <div class="row align-items-center text-white">
-      <div class="col-lg-4 text-lg-left">
-        Copyright © - Clipitch
-        <br />
-        <small>&copy; Todos os direitos reservados.</small>
+  <!-- Modal -->
+  <div class="modal fade" id="modalClips" tabindex="-1" aria-labelledby="modalClipsLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close" data-bs-dismiss="modal" aria-label="Close">&times;</span>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div id="modal-body">
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div id="modal-footer">
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</footer>
-<!-- /Rodapé -->
-
+</body>
 </html>
