--- a/src/clipitch/search.html
+++ b/src/clipitch/search.html
@@ -129,38 +129,40 @@
     </div>
   </div>
   <!-- /Galeria de resultados -->
-  
-  <!-- Trigger/Open The Modal -->
-  <button id="myBtn">Open Modal</button>
+
+  <!-- Rodapé -->
+  <footer class="fixed-bottom bg-custom py-4">
+    <div class="container">
+      <div class="row align-items-center text-white">
+        <div class="col-lg-4 text-lg-left">
+          Copyright © - Clipitch
+          <br />
+          <small>&copy; Todos os direitos reservados.</small>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- /Rodapé -->
+
   <!-- Modal -->
-  <div id="myModal" class="modal">
-    <!-- Conteúdo do Modal -->
-    <div class="modal-content">
-      <div class="modal-header">
-        <span class="close">&times;</span>
-      </div>
-      <div class="modal-body">
-        <div id="modal-body"></div>
-      </div>
-      <div class="modal-footer">
-        <div id="modal-footer"></div>
+  <div class="modal fade" id="modalClips" tabindex="-1" aria-labelledby="modalClipsLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close" data-bs-dismiss="modal" aria-label="Close">&times;</span>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div id="modal-body">
+            </div>            
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div id="modal-footer">
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+  </div>  
 </body>
-
-<!-- Rodapé -->
-<footer class="fixed-bottom bg-custom py-4">
-  <div class="container">
-    <div class="row align-items-center text-white">
-      <div class="col-lg-4 text-lg-left">
-        Copyright © - Clipitch
-        <br />
-        <small>&copy; Todos os direitos reservados.</small>
-      </div>
-    </div>
-  </div>
-</footer>
-<!-- /Rodapé -->
-
 </html>
